CHANGES IN VERSION 1.47.5
-------------------------

UTILITIES

    o Tweak display in `seqResetVariantID()`

    o new argument 'start' in `seqResetVariantID()`

    o `seqAddValue()`: use bit1 for a logical vector; new argument 'use_float32' for
      storing double


CHANGES IN VERSION 1.46.2
-------------------------

UTILITIES

    o `seqVCF_Header()` allows multiple cores to calculate the total number of
      variants when 'getnum=TRUE' (the Rsamtools package should be installed);
      `seqVCF2GDS()` is faster when obtaining the number of variants for
      splitting files.

    o new 'variant_count' in `seqVCF2GDS()` to specify the number of variants
      in the VCF file when it is known or an approximation is known; it is only
      applicable when multiple cores are used. If 'variant_count' is specified,
      counting the number of variants will be skipped.


CHANGES IN VERSION 1.46.0
-------------------------

UTILITIES

    o `seqGetData()` return NULL, if 'var.name=character()'


CHANGES IN VERSION 1.44.3
-------------------------

UTILITIES

    o update the C codes according to '_R_USE_STRICT_R_HEADERS_=true' &
      '_R_CXX_USE_NO_REMAP_=true'


CHANGES IN VERSION 1.44.2
-------------------------

BUG FIXES

    o fix `seqAddValue(, val=vector("list", NUM_VARIANT))`

    o fix the ploidy returned from `seqVCF_Header()`, when there are genotypes
      of males and females on Chromosome X


CHANGES IN VERSION 1.44.1
-------------------------

UTILITIES

    o new option 'numvariant' in `seqEmptyFile()`

BUG FIXES

    o `seqMerge()` should internally use "chr_position_ref_alt" to distinguish
      the variants in different files

    o `seqAddValue(, varnm="annotation/filter")` should work with a factor
      variable

    o `seqAddValue(, varnm="variant.id")` can reset the variant IDs with a
      different number of the variants


CHANGES IN VERSION 1.44.0
-------------------------

UTILITIES
